// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicForm should render a form 1`] = `
<LocalForm
  getDispatch={[Function]}
  initialState={Object {}}
  model="publicform"
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <ul
      className="search__filter"
    >
      <li>
        <label
          htmlFor="title"
        >
          <Connect(Translate)>
            Title
          </Connect(Translate)>
        </label>
      </li>
      <li
        className="wide"
      >
        <DefaultConnectedControlText
          className="form-control"
          id="title"
          model=".title"
        />
      </li>
    </ul>
  </div>
  <Connect(MetadataFormFields)
    model=""
    template={
      Immutable.Map {
        "properties": Immutable.List [
          Immutable.Map {
            "type": "text",
            "name": "text",
          },
        ],
      }
    }
    thesauris={Immutable.List []}
  />
  <ul
    className="search__filter"
  >
    <li>
      <label>
        <Connect(Translate)>
          Are you a robot?
        </Connect(Translate)>
        <span
          className="required"
        >
          *
        </span>
      </label>
    </li>
    <li
      className="wide"
    >
      <Captcha
        model=".captcha"
        refresh={[Function]}
      />
    </li>
  </ul>
  <input
    className="btn btn-success"
    type="submit"
    value="Submit"
  />
</LocalForm>
`;

exports[`PublicForm should render a form with file and attachments 1`] = `
<LocalForm
  getDispatch={[Function]}
  initialState={Object {}}
  model="publicform"
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <ul
      className="search__filter"
    >
      <li>
        <label
          htmlFor="title"
        >
          <Connect(Translate)>
            Title
          </Connect(Translate)>
        </label>
      </li>
      <li
        className="wide"
      >
        <DefaultConnectedControlText
          className="form-control"
          id="title"
          model=".title"
        />
      </li>
    </ul>
  </div>
  <Connect(MetadataFormFields)
    model=""
    template={
      Immutable.Map {
        "properties": Immutable.List [
          Immutable.Map {
            "type": "text",
            "name": "text",
          },
        ],
      }
    }
    thesauris={Immutable.List []}
  />
  <div
    className="form-group"
  >
    <ul
      className="search__filter"
    >
      <li>
        <label
          htmlFor="file"
        >
          <Connect(Translate)>
            File
          </Connect(Translate)>
          <DefaultConnectedControlFile
            accept=".pdf"
            className="form-control"
            getRef={[Function]}
            id="file"
            model=".file"
          />
        </label>
      </li>
    </ul>
  </div>
  <div
    className="form-group"
  >
    <ul
      className="search__filter"
    >
      <li>
        <label
          htmlFor="attachments"
        >
          <Connect(Translate)>
            File
          </Connect(Translate)>
          <DefaultConnectedControlFile
            className="form-control"
            getRef={[Function]}
            id="attachments"
            model=".attachments"
            multiple="multiple"
          />
        </label>
      </li>
    </ul>
  </div>
  <ul
    className="search__filter"
  >
    <li>
      <label>
        <Connect(Translate)>
          Are you a robot?
        </Connect(Translate)>
        <span
          className="required"
        >
          *
        </span>
      </label>
    </li>
    <li
      className="wide"
    >
      <Captcha
        model=".captcha"
        refresh={[Function]}
      />
    </li>
  </ul>
  <input
    className="btn btn-success"
    type="submit"
    value="Submit"
  />
</LocalForm>
`;
